--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Aplikasi Pencatatan",
-  "short_name": "Pencatatan",
+  "short_name": "Rezycology",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#f9f9f9",
